<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical"
    android:paddingHorizontal="17dp"
    android:gravity="center_vertical"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_marginTop="38dp"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginBottom="26dp"
        android:src="@mipmap/app_ic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/login_bg_two"
            android:layout_width="match_parent"
            android:layout_height="316dp"/>
        <View
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/login_bg_one"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <LinearLayout
            android:layout_marginTop="31dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="26dp"
            android:paddingHorizontal="24dp"
            android:background="@drawable/login_count_bg"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_login"
                android:theme="@style/app_fnot_style"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/login_shape"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ic_user" />

                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="11dp"
                    android:theme="@style/app_fnot_style"
                    android:background="@null"
                    android:textSize="15sp"
                    android:hint="@string/login_account"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/login_shape"
                android:gravity="center"
                android:orientation="horizontal">

                <!--<CheckBox-->
                <!--android:layout_width="66px"-->
                <!--android:layout_height="66px"-->
                <!--android:layout_margin="20px"-->
                <!--android:background="@drawable/password_selector"/>-->
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="12dp"
                    android:src="@mipmap/yanzhengma_ic" />

                <EditText
                    android:id="@+id/password"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_marginHorizontal="11dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/app_fnot_style"
                    android:background="@null"
                    android:textSize="15sp"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="19" />
                <ToggleButton
                    android:id="@+id/password_on"
                    android:text="null"
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="12dp"
                    android:textOff=""
                    android:textOn=""
                    android:background="@drawable/password_selector" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="29dp"
                android:layout_marginHorizontal="9dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="left"
                    android:id="@+id/register"
                    android:text="@string/register"
                    android:theme="@style/app_fnot_style"
                    android:textSize="15sp"
                    android:autoLink="all"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView

                    android:gravity="right"
                    android:id="@+id/forget_password"
                    android:text="@string/forget_password"
                    android:theme="@style/app_fnot_style"
                    android:textSize="15sp"
                    android:autoLink="all"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:padding="13dp"
                android:background="@drawable/login_btn_selector"
                android:text="@string/login"
                android:textColor="@color/white"
                android:theme="@style/app_fnot_style"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/listfnot" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fast_login"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/listfnot" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/wx_login"
                    android:src="@mipmap/wx_ic"
                    android:layout_width="49dp"
                    android:layout_height="49dp" />
                <ImageView
                    android:id="@+id/wb_login"
                    android:src="@mipmap/wb_ic"
                    android:layout_weight="1"
                    android:layout_width="49dp"
                    android:layout_height="49dp"/>
                <ImageView
                    android:id="@+id/qq_login"
                    android:src="@mipmap/qq_ic"
                    android:layout_width="49dp"
                    android:layout_height="49dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>