<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/heard"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:src="@mipmap/heard" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moving_name"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:theme="@style/app_fnot_style" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/moving_time"
                    android:textColor="@color/listfnot"
                    android:textSize="8sp"
                    android:theme="@style/app_fnot_style" />
            </LinearLayout>

            <ToggleButton
                android:id="@+id/attention"
                android:layout_width="61dp"
                android:layout_height="28dp"
                android:background="@drawable/attention_btn"
                android:paddingVertical="8dp"
                android:textOff="@string/attention_off"
                android:textOn="@string/attention_on"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:theme="@style/app_fnot_style" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/data"
                android:text="@string/moving_data"
                android:ellipsize="end"
                android:textSize="10sp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/black"
                android:theme="@style/app_fnot_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/img1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:id="@+id/img2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/img3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:id="@+id/img4"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/laud"
                    android:button="@null"
                    android:background="@drawable/moving_dainzan"
                    android:layout_width="30dp"
                    android:layout_height="25dp" />
                <TextView
                    android:id="@+id/land_num"
                    android:text="123"
                    android:textColor="@color/black"
                    android:theme="@style/app_fnot_style"
                    android:textSize="10sp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/comment"
                    android:src="@mipmap/pinglun3"
                    android:layout_width="42dp"
                    android:layout_height="36dp" />
                <TextView
                    android:id="@+id/comment_num"
                    android:text="123"
                    android:textColor="@color/black"
                    android:theme="@style/app_fnot_style"
                    android:textSize="10sp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#eeeeee"
        android:layout_marginBottom="12dp"/>
</LinearLayout>
